[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "SCPICommands"
readme = "ReadMe.md"
description = "A lib to parse SCPI commands from textual sources and build a model of allowed commands for a device."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["SCPICommands"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = ["parglare"]

[project.urls]
Homepage = "https://github.com/KOLANICH-physics/SCPICommands.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["SCPICommands", "SCPICommands.*"]

[tool.setuptools_scm]
